--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pool:
 steps:
 
 - task: Pester@10
-  displayName: Run Pester Tests
+  displayName: Run Pester Tests, Yay!
   inputs:
     scriptFolder: '$(System.DefaultWorkingDirectory)\*'
     resultsFile: '$(System.DefaultWorkingDirectory)\Test-Pester.XML'
